[package]
name = "modbustcp-server"
version = "0.1.0"
edition = "2024"
authors = ["WenJun <ncywq@hotmail.com>"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
eframe = "0.35.0"
egui_extras = "0.35.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-modbus = { version = "*", default-features = false, features = ["tcp-server"] }
